apps/platform/argocd/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress-traefik
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.tuntelder.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: crowdsec-mw
          namespace: edge
        # - name: authentik
        #   namespace: edge
        # - name: local-only
        #   namespace: edge
  tls:
    certResolver: letsencrypt
